apps/lidarr/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: lidarr
  namespace: apps
  labels:
    app.kubernetes.io/name: lidarr
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: lidarr
  template:
    metadata:
      labels:
        app: lidarr
        app.kubernetes.io/name: lidarr
    spec:
      nodeSelector:
        node.hardware.gpu: intel-igpu
      tolerations:
        - key: node.hardware.gpu
          operator: Equal
          value: intel-igpu
          effect: NoSchedule
      containers:
        - name: lidarr
          image: linuxserver/lidarr:8.1.2135
          ports:
            - containerPort: 8686
          volumeMounts:
            - name: config
              mountPath: /config
            - name: media
              mountPath: /mnt
          resources:
            requests:
              cpu: "50m"
              memory: "128Mi"
            limits:
              cpu: "500m"
              memory: "768Mi"
          readinessProbe:
            httpGet:
              path: /ping
              port: 8686
            initialDelaySeconds: 10
            periodSeconds: 10
          livenessProbe:
            httpGet:
              path: /ping
              port: 8686
            initialDelaySeconds: 30
            periodSeconds: 30
      volumes:
        - name: config
          persistentVolumeClaim:
            claimName: lidarr-config-pvc
        - name: media
          persistentVolumeClaim:
            claimName: lidarr-media-pvc
